--- a/public/stylus/base.styl
+++ b/public/stylus/base.styl
@@ -30,11 +30,9 @@ body
 	flex-direction column
 	&__content
 		flex 1
-		display flex
-		flex-direction column
 		
 .background-container
-	flex 1
+	// overflow hidden
 	background-image url('/img/background1.jpg')
 	background-size cover
 	background-position center center
