--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -100,3 +100,19 @@
 				display none
 			&.cancel
 				display table-cell
+				
+
+/*------------------------------------*
+	$ BUTTON LIKE / WISH-LIST
+*------------------------------------*/
+.button-like
+.button-wish-list
+	color #444
+	font-weight 100
+	font-size .85em
+	letter-spacing 1px
+	font-family 'Roboto Condensed'
+	cursor pointer
+	.fa-heart
+		color #f54545
+		display none
