--- a/public/stylus/objects/flash-message.styl
+++ b/public/stylus/objects/flash-message.styl
@@ -12,7 +12,7 @@
 		background #fae7c8
 		color #ce6637
 	&.success
-		background rgba(green, .4)
+		background #81C784
 		color white
 	.text
 		font-family Arial
