--- a/app/views/partials/products.html
+++ b/app/views/partials/products.html
@@ -8,11 +8,11 @@
 			<a class="product-image" href="/{{ product.User.username}}/product/{{product.nameSlugify}}">
 				<img src="{{ product.photo }}">
 			</a>
-			<div class="product-info">
+			<div class="product-title">
 				<div class="title">{{product.name}}</div>
-				<div class="price">${{product.price}}</div>
 			</div>
-			<div class="product-social">
+			<div class="product-info">
+				<div class="price">s./{{product.price}}</div>
 				<div class="like">
 					<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
 				</div>
@@ -24,3 +24,14 @@
 	</div>
 	{% endfor %}
 </section>
+
+				<!-- <div class="price">${{product.price}}</div> -->
+
+			<!-- <div class="product-social">
+				<div class="like">
+					<span class="button-like"> <i class="fa fa-heart-o"></i> <span>{{product.likes}}</span> </span>
+				</div>
+				<div class="wish-list">
+					<span class="button-wish-list"> <i class="fa fa-square-o"></i> 500 </span>
+				</div>
+			</div> -->
