--- a/public/css/products.css
+++ b/public/css/products.css
@@ -397,27 +397,8 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  -o-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
 }
 .background-container {
-  -webkit-box-flex: 1;
-  -moz-box-flex: 1;
-  -o-box-flex: 1;
-  box-flex: 1;
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
   background-image: url("/img/background1.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -584,6 +565,20 @@ body {
 .button-liner.disabled:hover .button-liner__action.cancel {
   display: table-cell;
 }
+.button-like,
+.button-wish-list {
+  color: #444;
+  font-weight: 100;
+  font-size: 0.85em;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  cursor: pointer;
+}
+.button-like .fa-heart,
+.button-wish-list .fa-heart {
+  color: #f54545;
+  display: none;
+}
 .section__title {
   margin: auto;
   padding: 1rem;
@@ -726,6 +721,13 @@ body {
   display: none;
 }
 @media (min-width: 1100px) {
+  .section__workspace__elements {
+    -webkit-transition: padding 0.5s;
+    -moz-transition: padding 0.5s;
+    -o-transition: padding 0.5s;
+    -ms-transition: padding 0.5s;
+    transition: padding 0.5s;
+  }
   .section__workspace__elements.moveLeft {
     padding-left: 10rem;
   }
@@ -939,9 +941,23 @@ body {
   -ms-transition: box-shadow ease-in-out 125ms;
   transition: box-shadow ease-in-out 125ms;
 }
-.product .product-info {
+.product:hover {
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+}
+.product .product-title {
   border-bottom: 1px dashed #e6e8ec;
-  padding: 0.5em 1em;
+  padding: 0.5em;
+}
+.product .product-title .title {
+  font-size: 0.8em;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  white-space: nowrap;
+  overflow: hidden;
+}
+.product .product-info {
+  padding: 0.5em;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -954,42 +970,12 @@ body {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between;
-}
-.product .product-info .title {
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  font-family: 'Raleway';
 }
 .product .product-info .price {
   font-size: 0.9em;
   font-weight: 500;
   letter-spacing: 0.5px;
   font-family: 'Raleway';
-}
-.product .product-social {
-  padding: 0.5em 1em;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-}
-.product .product-social .price {
-  font-size: 0.9em;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  font-family: 'Raleway';
-}
-.product:hover {
-  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
-  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
 }
 @media screen and (min-width: 360px) {
   .products {
