no overflow cover images in auth forms

--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -3,7 +3,7 @@
 	
 	{% set path = 'signup' %}
 	{% set title = 'Arte Manifiesto | Signup' %}
-	{% set css = 'login' %}
+	{% set css = 'signup' %}
 
 {% block elements %}
 		
