--- a/app/views/partials/footer.html
+++ b/app/views/partials/footer.html
@@ -1,6 +1,7 @@
 <!-- ********************************************************************
 	$ FOOTER
 ********************************************************************* -->
+
 <section class="footer-container">
 	<footer class="footer">
 		<div class="footer__logo">
@@ -26,3 +27,7 @@
 		</div>
 	</footer>
 </section>
+
+{% if path != 'signup' && path != 'login' %}
+{% endif %}
+
