--- a/app/views/partials/users.html
+++ b/app/views/partials/users.html
@@ -1,5 +1,5 @@
 <!-- ********************************************************************
-	$ ARTISTS
+	$ USERS
 ********************************************************************* -->
 <section class="users">
 	{% for user in users %}
