--- a/public/stylus/base.styl
+++ b/public/stylus/base.styl
@@ -30,9 +30,9 @@ body
 	flex-direction column
 	&__content
 		flex 1
+		position relative
 		
 .background-container
-	// overflow hidden
 	background-image url('/img/background1.jpg')
 	background-size cover
 	background-position center center
