--- a/public/stylus/objects/login.styl
+++ b/public/stylus/objects/login.styl
@@ -4,8 +4,21 @@
 .auth-container
 	margin auto
 	max-width 400px
+	// position absolute
+	// top 0
+	// bottom 0
+	// left 0
+	// right 0
+	// overflow auto
+	// display flex
+	// padding 1.5rem 1rem
+	// justify-content center
+	// align-items center
+
 .auth
-	position relative
+	// max-width 400px
+	// margin auto
+	// position relative
 	margin 1.5rem 1rem
 	padding 1rem 1.5rem
 	box-shadow rgba(0,0,0,0.35) 0 0 10px
@@ -31,7 +44,7 @@
 			font-weight bold
 			text-transform uppercase
 			font-family 'Raleway'
-			font-size .75rem
+			font-size .7rem
 			padding .5rem .25rem
 			display none
 			letter-spacing .5px
