--- a/public/css/products.css
+++ b/public/css/products.css
@@ -397,6 +397,7 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  position: relative;
 }
 .background-container {
   background-image: url("/img/background1.jpg");
