--- a/public/stylus/signup.styl
+++ b/public/stylus/signup.styl
@@ -1,10 +1,14 @@
 /*------------------------------------*
-	$ PRODUCTS
+	$ SIGNUP
 *------------------------------------*/
 @import 'base.styl'
 
 @import 'elements/inputs.styl'
 @import 'elements/buttons.styl'
 
-@import 'objects/section.styl'
-@import 'objects/products.styl'
+@import 'objects/flash-message.styl'
+@import 'objects/login.styl'
+
+
+.background-container
+	min-height 56rem
