--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Add work</title>
+    <title>Add Work</title>
 
     <style>
         #direct_upload_jquery {
@@ -14,37 +14,126 @@
 </head>
 <body>
 
+
 <div id="direct_upload_jquery">
+    <div id="files" class="files"></div>
     <form>
         <input type="file" name="file" class="cloudinary_fileupload"/>
     </form>
     <div class="preview"></div>
 </div>
 
+<script id="template-upload" type="text/x-tmpl">
+{% raw %}
+{% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-upload fade">
+        <td>
+            <span class="preview"></span>
+        </td>
+        <td>
+            <p class="name">{%=file.name%}</p>
+            <strong class="error text-danger"></strong>
+        </td>
+        <td>
+            <p class="size">Processing...</p>
+            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="progress-bar progress-bar-success" style="width:0%;"></div></div>
+        </td>
+        <td>
+            {% if (!i && !o.options.autoUpload) { %}
+                <button class="btn btn-primary start" disabled>
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>Start</span>
+                </button>
+            {% } %}
+            {% if (!i) { %}
+                <button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>
+            {% } %}
+        </td>
+    </tr>
+{% } %}
+{% endraw %}
+</script>
+
 <script src='/js/vendor/jquery.min.js'></script>
+<script src='/js/vendor/jquery.tmpl.min.js'></script>
+<script src='/js/vendor/load-image.min.js'></script>
 <script src='/js/vendor/jquery.ui.widget.js'></script>
+<script src='/js/vendor/canvas-to-blob.min.js'></script>
 <script src='/js/vendor/jquery.iframe-transport.js'></script>
 <script src='/js/vendor/jquery.fileupload.js'></script>
-<script src='/js/vendor/jquery.cloudinary.js'></script>
-<script src='/js/vendor/jquery.fileupload-image.js'></script>
 <script src='/js/vendor/jquery.fileupload-process.js'></script>
+<script src='/js/vendor/jquery.fileupload-image.js'></script>
 <script src='/js/vendor/jquery.fileupload-validate.js'></script>
+<script src='/js/vendor/jquery.fileupload-ui.js'></script>
+<script src='/js/vendor/jquery.cloudinary.js'></script>
 <script>
     $(function () {
-        $.cloudinary.config().cloud_name = 'arte-manifiesto';
-        $.cloudinary.config().upload_preset = 'ky9z5ill';
         var currentPublicID;
-        $(".cloudinary_fileupload").unsigned_cloudinary_upload($.cloudinary.config().upload_preset, {}, {
-            dropZone: "#direct_upload_jquery",
-            start: function (e) {
-                if (currentPublicID) {
-                }
-                console.log('start');
-            },
-            fail: function (e, data) {
-                console.log('fail', e, data);
-            }
-        })
+        var uploadButton = $('<button/>')
+                .prop('disabled', true)
+                .text('Processing...')
+                .on('click', function () {
+                    var $this = $(this),
+                            data = $this.data();
+                    $this
+                            .off('click')
+                            .text('Abort')
+                            .on('click', function () {
+                                $this.remove();
+                                data.abort();
+                            });
+                    data.submit().always(function () {
+                        $this.remove();
+                    });
+                });
+
+        $.cloudinary.config({cloud_name: 'arte-manifiesto'});
+
+        $(".cloudinary_fileupload").unsigned_cloudinary_upload(
+                'ky9z5ill',
+                {cloud_name: 'arte-manifiesto'},
+                {
+                    dataType: 'json',
+                    acceptFileTypes: /(\.|\/)(gif|jpe?g|png)$/i,
+                    maxFileSize: 5000000, // 5 MB
+                    // Enable image resizing, except for Android and Opera,
+                    // which actually support image resizing, but fail to
+                    // send Blob objects via XHR requests:
+                    disableImageResize: /Android(?!.*Chrome)|Opera/
+                            .test(window.navigator.userAgent),
+                    previewMaxWidth: 100,
+                    previewMaxHeight: 100,
+                    previewCrop: true,
+                    imageMaxWidth: 1000,
+                    imageMaxHeight: 1000,
+                    multiple: true,
+                    autoUpload:true,
+                    dropZone: "#direct_upload_jquery",
+                    start: function (e) {
+                        if (currentPublicID) {
+
+                        }
+                        console.log('start');
+                    },
+                    fail: function (e, data) {
+                        console.log('fail', e, data);
+                    }
+                })
+                .on('fileuploadadd', function (e, data) {
+                    data.context = $('<div/>').appendTo('#files');
+                    $.each(data.files, function (index, file) {
+                        var node = $('<p/>')
+                                .append($('<span/>').text(file.name));
+                        if (!index) {
+                            node
+                                    .append('<br>')
+                                    .append(uploadButton.clone(true).data(data));
+                        }
+                        node.appendTo(data.context);
+                    });                })
                 .on("cloudinaryprogress", function (e, data) {
                     console.log('cloudinaryprogress', data);
                     console.log(Math.round((data.loaded * 100.0) / data.total))
@@ -54,14 +143,15 @@
                     console.log(Math.round((data.loaded * 100.0) / data.total));
                 }).
                 on("cloudinarydone", function (e, data) {
+                    console.log(data);
                     currentPublicID = data.result.public_id;
                     $('.preview').append(
                             $.cloudinary.image(data.result.public_id, {
                                 format: data.result.format, version: data.result.version,
-                                width: 150
+                                width: 100
                             })
                     );
-                    $('.image_public_id').val(data.result.public_id);
+                    console.log(data.result.public_id);
                     return true;
                 });
     });
