--- a/public/css/works.css
+++ b/public/css/works.css
@@ -406,3 +406,731 @@ body {
   background-size: cover;
   background-position: center center;
 }
+/*------------------------------------*
+	$INT TO STRING
+*------------------------------------*/
+.input {
+  font-size: 1rem;
+  padding: 0.5em;
+  color: #555;
+  border: 1px solid #ccc;
+  width: 100%;
+}
+.input:focus {
+  border-color: rgba(82,168,236,0.8);
+  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
+  box-shadow: 0 0 8px rgba(82,168,236,0.6);
+}
+.input[data-size='large'] {
+  font-size: 1.15rem;
+}
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 0.5rem;
+  left: 0.75em;
+  color: #808080;
+}
+.search .options {
+  display: none;
+  font-family: 'Raleway';
+  border: solid 1px #ddd;
+  color: #333;
+  margin: auto;
+}
+.search .options.visible {
+  display: block;
+}
+.search .options .option {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+.search .options .option.selected {
+  background: #ededed;
+}
+.search .options .option .search-text {
+  font-weight: 600;
+}
+.search .options .option:not(:last-child) {
+  border-bottom: solid 1px #ddd;
+}
+.search .options .option:hover {
+  background: #ededed;
+}
+.facebook-button {
+  color: #fff;
+  display: table-cell;
+  padding: 0.75rem;
+  font-weight: 600;
+  font-size: 0.9rem;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  background: -webkit-linear-gradient(#4e69a2, #3b5998);
+  background: -moz-linear-gradient(#4e69a2, #3b5998);
+  background: -o-linear-gradient(#4e69a2, #3b5998);
+  background: -ms-linear-gradient(#4e69a2, #3b5998);
+  background: linear-gradient(#4e69a2, #3b5998);
+}
+.facebook-button i {
+  font-size: 1.25em;
+}
+.facebook-button[data-expand='true'] {
+  display: block;
+  text-align: center;
+}
+.button-solid {
+  color: #fff;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5em 1em;
+  background: #3000ff;
+  display: table-cell;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-solid[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-solid[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-solid[data-color='red'] {
+  background: #f54545;
+}
+.button-solid[data-expand='true'] {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
+.button-liner {
+  color: #000;
+  cursor: pointer;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  display: table-cell;
+  border: 1px solid #bbb;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed';
+}
+.button-liner__action {
+  padding: 0.5em;
+  display: table-cell;
+}
+.button-liner__action.following,
+.button-liner__action.cancel {
+  display: none;
+}
+.button-liner__number {
+  padding: 0.5em;
+  display: table-cell;
+  border-left: 1px solid #bbb;
+}
+.button-liner[data-size='small'] {
+  font-size: 0.85rem;
+}
+.button-liner[data-size='large'] {
+  font-size: 1.15rem;
+}
+.button-liner.disabled {
+  color: #aaa;
+  border-color: #ccc;
+}
+.button-liner.disabled .button-liner__number {
+  border-color: #bbb;
+}
+.button-liner.disabled .button-liner__action.folllow {
+  display: none;
+}
+.button-liner.disabled .button-liner__action.following {
+  display: table-cell;
+}
+.button-liner.disabled:hover .button-liner__action.following {
+  display: none;
+}
+.button-liner.disabled:hover .button-liner__action.cancel {
+  display: table-cell;
+}
+.button-like,
+.button-wish-list {
+  color: #444;
+  font-weight: 100;
+  font-size: 0.85em;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  cursor: pointer;
+}
+.button-like .fa-heart,
+.button-wish-list .fa-heart {
+  color: #f54545;
+  display: none;
+}
+.section__title {
+  margin: auto;
+  padding: 1rem;
+  text-align: center;
+  max-width: 1100px;
+}
+.section__navigation {
+  text-align: center;
+  display: none;
+}
+.section__navigation.visible {
+  display: block;
+}
+.section__filters {
+  margin: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  -o-box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-align: start;
+  -moz-box-align: start;
+  -o-box-align: start;
+  -ms-flex-align: start;
+  -webkit-align-items: flex-start;
+  align-items: flex-start;
+  max-width: 1100px;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+}
+.section__filters .search {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 100%;
+  -ms-flex: 100%;
+  flex: 100%;
+  margin: 0.5rem 1rem;
+}
+.section__filters .button-filter {
+  margin: 0.5rem 1rem;
+}
+.section__workspace {
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  max-width: 1100px;
+}
+.section__workspace__filter {
+  z-index: 1;
+  margin: 1rem;
+  background: #fff;
+  position: absolute;
+  border: solid 1px #ddd;
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
+  -o-transition: -o-transform 0.5s;
+  -ms-transition: -ms-transform 0.5s;
+  transition: transform 0.5s;
+}
+.section__workspace__filter:nth-child(1) {
+  -webkit-transform: translate(-120%, 0);
+  -moz-transform: translate(-120%, 0);
+  -o-transform: translate(-120%, 0);
+  -ms-transform: translate(-120%, 0);
+  transform: translate(-120%, 0);
+}
+.section__workspace__filter:nth-child(1).visible {
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+}
+.section__workspace__filter:nth-child(2) {
+  -webkit-transform: translate(120%, 0);
+  -moz-transform: translate(120%, 0);
+  -o-transform: translate(120%, 0);
+  -ms-transform: translate(120%, 0);
+  transform: translate(120%, 0);
+  right: 0;
+}
+.section__workspace__filter:nth-child(2).visible {
+  -webkit-transform: translate(0%, 0);
+  -moz-transform: translate(0%, 0);
+  -o-transform: translate(0%, 0);
+  -ms-transform: translate(0%, 0);
+  transform: translate(0%, 0);
+}
+.section__workspace__elements {
+  min-height: 500px;
+}
+.section__workspace__elements .loading {
+  color: #aaa;
+  margin: 2rem;
+  display: none;
+  font-size: 1.75rem;
+  text-align: center;
+}
+.section__workspace__elements .loading.visible {
+  display: block;
+}
+.section__workspace__elements .loading .fa {
+  -webkit-animation: 1.5s circle infinite;
+  -moz-animation: 1.5s circle infinite;
+  -o-animation: 1.5s circle infinite;
+  -ms-animation: 1.5s circle infinite;
+  animation: 1.5s circle infinite;
+}
+.section__workspace__elements .empty-result {
+  display: none;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+.section__workspace__elements .empty-result.visible {
+  display: block;
+}
+.section__workspace__elements .empty-result a {
+  color: #333;
+  font-size: 1rem;
+  fon-weight: 600;
+}
+.section__workspace__elements .more {
+  margin: 1rem auto;
+  text-align: center;
+}
+.section__workspace__elements .more.hidden {
+  display: none;
+}
+@media (min-width: 1100px) {
+  .section__workspace__elements {
+    -webkit-transition: padding 0.5s;
+    -moz-transition: padding 0.5s;
+    -o-transition: padding 0.5s;
+    -ms-transition: padding 0.5s;
+    transition: padding 0.5s;
+  }
+  .section__workspace__elements.moveLeft {
+    padding-left: 10rem;
+  }
+  .section__workspace__elements.moveRight {
+    padding-right: 10rem;
+  }
+  .filter {
+    width: 9rem;
+  }
+}
+@media (min-width: 720px) {
+  .section__filters .button-filter:nth-child(2) {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -o-box-ordinal-group: 1;
+    -ms-flex-order: 1;
+    -webkit-order: 1;
+    order: 1;
+  }
+  .section__filters .search {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -o-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+  }
+  .section__filters .button-filter:nth-child(3) {
+    -webkit-box-ordinal-group: 3;
+    -moz-box-ordinal-group: 3;
+    -o-box-ordinal-group: 3;
+    -ms-flex-order: 3;
+    -webkit-order: 3;
+    order: 3;
+  }
+}
+@media (min-width: 720px) {
+  .section__filters .search {
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.filter {
+  font-size: 0.85rem;
+  font-family: 'Raleway';
+}
+.filter__title {
+  font-weight: 600;
+  padding: 0.5rem 1rem;
+  border-bottom: solid 1px #ddd;
+  -webkit-box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  box-shadow: inset 0 -1px 0 #fff, 0 2px 6px #eee;
+  background-image: -webkit-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -moz-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -o-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: -ms-linear-gradient(top, #fff 0, #f6f6f6 100%);
+  background-image: linear-gradient(to bottom, #fff 0, #f6f6f6 100%);
+}
+.filter:not(:first-child) {
+  border-top: solid 1px #ddd;
+}
+.filter__item {
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+}
+.filter__item.selected {
+  background: #ededed;
+}
+.filter__price {
+  padding: 1rem 1rem 2rem 1rem;
+}
+.filter__fueatured {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 1rem 0.5rem;
+}
+@-moz-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@-webkit-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@-o-keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@keyframes circle {
+  0% {
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -o-transform: rotate(0);
+    -ms-transform: rotate(0);
+    transform: rotate(0);
+  }
+  50% {
+    -webkit-transform: rotate(-180deg);
+    -moz-transform: rotate(-180deg);
+    -o-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
+    transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    -moz-transform: rotate(-360deg);
+    -o-transform: rotate(-360deg);
+    -ms-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+.works {
+  padding: 0 0.5rem;
+  overflow: hidden;
+  max-width: 1100px;
+  margin: auto;
+}
+.works .work {
+  display: block;
+  margin: 1rem 0.5rem;
+  border: 1px solid #eee;
+  -webkit-transition: box-shadow ease-in-out 125ms;
+  -moz-transition: box-shadow ease-in-out 125ms;
+  -o-transition: box-shadow ease-in-out 125ms;
+  -ms-transition: box-shadow ease-in-out 125ms;
+  transition: box-shadow ease-in-out 125ms;
+  position: relative;
+}
+.works .work:hover {
+  -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+  box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+}
+.works .work__socials {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+.works .work__socials .social-block {
+  margin: auto;
+}
+.works .work__socials .social-block .social-item {
+  background: rgba(0,0,0,0.375);
+  color: #fff;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  padding: 0.5em;
+  margin: 0.5em;
+  font-size: 1em;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.works .work__socials .social-block .social-item.active {
+  background: #fff;
+  color: #f54545;
+}
+.works .work__like-cover {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.works .work__like-cover .like-simbol {
+  color: #fff;
+  margin: auto;
+  font-size: 0;
+}
+.works .work__like-cover .like-simbol.fade {
+  -webkit-animation: 0.5s fade;
+  -moz-animation: 0.5s fade;
+  -o-animation: 0.5s fade;
+  -ms-animation: 0.5s fade;
+  animation: 0.5s fade;
+}
+@media (min-width: 920px) {
+  .works .work__like-cover {
+    display: none;
+  }
+  .works .work:hover .work__socials {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+  }
+}
+@media screen and (min-width: 151px) and (max-width: 300px) {
+  .works[data-columns]::before {
+    content: '1 .column.size-1of1';
+  }
+}
+@media screen and (min-width: 301px) and (max-width: 450px) {
+  .works[data-columns]::before {
+    content: '2 .column.size-1of2';
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 600px) {
+  .works[data-columns]::before {
+    content: '3 .column.size-1of3';
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 750px) {
+  .works[data-columns]::before {
+    content: '4 .column.size-1of4';
+  }
+}
+@media screen and (min-width: 751px) and (max-width: 900px) {
+  .works[data-columns]::before {
+    content: '5 .column.size-1of5';
+  }
+}
+@media screen and (min-width: 901px) {
+  .works[data-columns]::before {
+    content: '6 .column.size-1of6';
+  }
+}
+.column {
+  float: left;
+}
+.size-1of1 {
+  width: 100%;
+}
+.size-1of2 {
+  width: 50%;
+}
+.size-1of3 {
+  width: 33.333333333333336%;
+}
+.size-1of4 {
+  width: 25%;
+}
+.size-1of5 {
+  width: 20%;
+}
+.size-1of6 {
+  width: 16.666666666666668%;
+}
+@-moz-keyframes fade {
+  0% {
+    font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
+  }
+}
+@-webkit-keyframes fade {
+  0% {
+    font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
+  }
+}
+@-o-keyframes fade {
+  0% {
+    font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
+  }
+}
+@keyframes fade {
+  0% {
+    font-size: 0;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+  }
+  50% {
+    opacity: 1;
+    -ms-filter: none;
+    filter: none;
+  }
+  100% {
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    font-size: 3rem;
+  }
+}
