--- a/public/stylus/objects/flash-message.styl
+++ b/public/stylus/objects/flash-message.styl
@@ -7,20 +7,20 @@
 	text-align center
 	position relative
 	margin 0 1rem
-	padding .5rem
+	padding 1rem
 	&.error
 		background #fae7c8
 		color #ce6637
 	&.success
-		background #81C784
-		color white
+		background #e8edd0
+		color #48970c
 	.text
 		font-family Arial
-		font-size .9rem
+		font-size .95rem
 		letter-spacing 1px
 	.fa
 		position absolute
 		top 0
 		right 0
 		cursor pointer
-		padding .5rem
+		padding 1rem
