--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -14,6 +14,10 @@
 </form>
 <script src="/js/lib/jquery.min.js"></script>
 <script>
+
+	var userReset = {{ userReset|json|safe }}
+	console.log('userReset: ', userReset)
+	
 </script>
 </body>
 </html>
