--- a/public/stylus/reset.styl
+++ b/public/stylus/reset.styl
@@ -1,5 +1,5 @@
 /*------------------------------------*
-	$ LOGIN
+	$ RESET
 *------------------------------------*/
 @import 'base.styl'
 
@@ -7,4 +7,4 @@
 @import 'elements/buttons.styl'
 
 @import 'objects/flash-message.styl'
-@import 'objects/auth.styl'
+@import 'objects/reset.styl'
