--- a/public/stylus/signup.styl
+++ b/public/stylus/signup.styl
@@ -7,7 +7,7 @@
 @import 'elements/buttons.styl'
 
 @import 'objects/flash-message.styl'
-@import 'objects/login.styl'
+@import 'objects/auth.styl'
 
 
 .background-container
