succes and error messages

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,6 +1,7 @@
 
 {% extends 'partials/base.html' %}
 
+	{% set path = 'index' %}
 	{% set title = 'Arte Manifiesto' %}
 	{% set css = 'index' %}
 	
