--- a/public/stylus/base.styl
+++ b/public/stylus/base.styl
@@ -9,9 +9,10 @@
 @import 'elements/texts.styl'
 @import 'elements/menus.styl'
 
-@import 'objects/footer.styl'
-@import 'objects/category-menu.styl'
 @import 'objects/header.styl'
+@import 'objects/category-menu.styl'
+@import 'objects/flash-message.styl'
+@import 'objects/footer.styl'
 
 html
 	height 100%
@@ -30,9 +31,3 @@ body
 	flex-direction column
 	&__content
 		flex 1
-		position relative
-		
-.background-container
-	background-image url('/img/background1.jpg')
-	background-size cover
-	background-position center center
