--- a/public/stylus/objects/auth.styl
+++ b/public/stylus/objects/auth.styl
@@ -1,24 +1,11 @@
 /*------------------------------------*
-	$ LOGIN
+	$ AUTH
 *------------------------------------*/
 .auth-container
 	margin auto
 	max-width 400px
-	// position absolute
-	// top 0
-	// bottom 0
-	// left 0
-	// right 0
-	// overflow auto
-	// display flex
-	// padding 1.5rem 1rem
-	// justify-content center
-	// align-items center
 
 .auth
-	// max-width 400px
-	// margin auto
-	// position relative
 	margin 1.5rem 1rem
 	padding 1rem 1.5rem
 	box-shadow rgba(0,0,0,0.35) 0 0 10px
@@ -75,3 +62,12 @@
 		transform rotate(-180deg)
 	100%
 		transform rotate(-360deg)
+		
+
+/*------------------------------------*
+	$ BACKGROUND IMAGE
+*------------------------------------*/
+.background-container
+	background-image url('/img/background1.jpg')
+	background-size cover
+	background-position center center
