--- a/public/css/works.css
+++ b/public/css/works.css
@@ -245,6 +245,70 @@ input[type="submit"] {
     display: none;
   }
 }
+.header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0.5rem auto;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.category-menu .carousel {
+  margin: auto;
+  height: 2.5rem;
+  padding: 0 1rem;
+  overflow: hidden;
+  max-width: 1100px;
+}
+.flash-message-container {
+  max-width: 1100px;
+  margin: auto;
+  display: none;
+}
+.flash-message {
+  text-align: center;
+  position: relative;
+  margin: 0 1rem;
+  padding: 1rem;
+}
+.flash-message.error {
+  background: #fae7c8;
+  color: #ce6637;
+}
+.flash-message.success {
+  background: #e8edd0;
+  color: #48970c;
+}
+.flash-message .text {
+  font-family: Arial;
+  font-size: 0.95rem;
+  letter-spacing: 1px;
+}
+.flash-message .fa {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  padding: 1rem;
+}
 .footer-container {
   background: #181818;
 }
@@ -329,39 +393,6 @@ input[type="submit"] {
     text-align: right;
   }
 }
-.category-menu {
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-}
-.category-menu .carousel {
-  margin: auto;
-  height: 2.5rem;
-  padding: 0 1rem;
-  overflow: hidden;
-  max-width: 1100px;
-}
-.header {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  max-width: 1100px;
-  margin: 0.5rem auto;
-}
 html {
   height: 100%;
   font-size: 90%;
@@ -397,14 +428,6 @@ body {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  position: relative;
-}
-.background-container {
-  background-image: url("/img/background1.jpg");
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  background-position: center center;
 }
 /*------------------------------------*
 	$INT TO STRING
