--- a/public/css/users.css
+++ b/public/css/users.css
@@ -245,6 +245,46 @@ input[type="submit"] {
     display: none;
   }
 }
+.square-menu-container {
+  max-width: 1100px;
+  margin: auto;
+}
+.square-menu {
+  letter-spacing: 1.5px;
+  font-family: 'Oswald';
+  color: #585858;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  margin: 0 1rem;
+  font-size: 0.9rem;
+}
+.square-menu__item {
+  border: solid 1px #ddd;
+  padding: 0.5rem 0.75rem;
+  margin: 0.5rem 0;
+  background: #fff;
+  cursor: pointer;
+  position: relative;
+}
+.square-menu__item:not(:first-child) {
+  margin-left: 0.5rem;
+}
+.square-menu__item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+.square-menu__item .square {
+  position: absolute;
+  background: #fff;
+  width: 100%;
+  bottom: -0.51rem;
+  left: 0;
+  height: 1rem;
+  border: solid 1px #fff;
+}
 .header {
   display: -webkit-box;
   display: -moz-box;
