--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -64,3 +64,71 @@
 		.skinny-menu__item__icon
 			display none
 			
+
+/*------------------------------------*
+	$ SQUARE-MENU
+*------------------------------------*/
+.square-menu-container
+	max-width max-width
+	margin auto
+
+.square-menu
+	letter-spacing 1.5px
+	font-family 'Oswald'
+	color #585858
+	display flex
+	margin 0 1rem
+	font-size .9rem
+	&__item
+		border solid 1px #ddd
+		padding .5rem .75rem
+		margin .5rem 0
+		background white
+		cursor pointer
+		position relative
+		&:not(:first-child)
+			margin-left .5rem
+		&:not(:last-child)
+			margin-right .5rem
+		.square
+			position absolute
+			background white
+			width 100%
+			bottom -.51rem
+			left 0
+			height 1rem
+			border solid 1px white
+			
+	// &__item
+		// margin-top .25rem
+		// margin-bottom .25rem
+		// padding .75rem
+		// border solid 1px #ddd
+		// background white
+			
+	// letter-spacing: 1.5px;
+	// font-family: 'Oswald';
+	// line-height .8em
+	// color #585858
+	// white-space nowrap
+	// overflow auto
+	// font-size .9rem
+	// &::-webkit-scrollbar
+	// 	display none
+	// &__element
+	// 	display table-cell
+
+// .square-menu__element:not(:first-child)
+// 	.square-menu__item
+// 		margin-left .5rem
+
+// .square-menu__element:not(:last-child)
+// 	.square-menu__item
+// 		margin-right .5rem
+
+// .carousel-square-menu
+// 	overflow hidden
+// 	height 3rem
+// 	padding 0 1rem
+// 	max-width max-width
+// 	margin auto
