--- a/public/stylus/profile.styl
+++ b/public/stylus/profile.styl
@@ -2,3 +2,46 @@
 	$ PROFILE
 *------------------------------------*/
 @import 'base.styl'
+
+@import 'elements/buttons.styl'
+
+// @import 'objects/header.styl'
+
+.profile
+	background #f6f6f6
+	&__info
+		display flex
+		align-items center
+		max-width max-width
+		margin auto
+		padding 1.5rem 0
+	&__elements
+		height 200px
+		background white
+		border-top solid 1px #ddd
+
+.profile
+	&__avatar
+		width 5rem
+		margin 0 1rem
+		img
+			border-radius 50%
+	&__info
+		display flex
+		align-items center
+		padding-top .75rem
+	&__city
+		padding-right 1rem
+
+
+@media (min-width: tablet)
+	.profile
+		&__avatar
+			width 7rem
+			img
+				border solid 5px #ccc
+
+@media (min-width: tablet-medium)
+	.profile
+		&__avatar
+			width 9rem
